fix(_grid-name.scss _grid.scss): delete grid-gap attributes
May cause page width and height to be inconsistent with expectations

BREAKING CHANGE: delete style

--- a/src/_grid-name.scss
+++ b/src/_grid-name.scss
@@ -2,12 +2,10 @@
 // @Date:   2018-01-20 01:12:51 pm
 // @Email:  pengchengou@gmail.com
 // @Last modified by:   vxhly
-// @Last modified time: 2018-01-20 02:03:21 pm
+// @Last modified time: 2018-03-17 04:56:30 pm
 // @License: MIT
 
 [grid-name] {
-  grid-gap: $gridRowGap $gridColumnGap; // 区域间距
-
   > [grid-header] {
     grid-area: header;
   }
@@ -29,7 +27,6 @@
  * 从上至下使用 [] 将区域名字括起来，区域名字使用空格相隔
  * 从左至右使用 () 将区域名字括起来，区域名字使用空格相隔
  */
-
 [grid-name="[header main]"] {
   /**
    *   ----------
