--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -2,7 +2,7 @@
 // @Date:   2018-01-20 01:14:44 pm
 // @Email:  pengchengou@gmail.com
 // @Last modified by:   vxhly
-// @Last modified time: 2018-01-20 07:11:26 pm
+// @Last modified time: 2018-03-17 04:56:13 pm
 // @License: MIT
 
 [grid] {
@@ -13,11 +13,6 @@
 
 [grid] img {
   object-fit: cover;
-}
-
-[grid^="row-"],
-[grid^="col-"] {
-  grid-gap: 1.5rem;
 }
 @for $i from 1 through 12 {
   [grid~="row-#{$i}"] {
